--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -145,32 +145,98 @@
         app:layout_constraintTop_toBottomOf="@id/download" />
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/account_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/xyz"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/like"
-        app:shapeAppearanceOverlay="@style/Shape_image_circle" />
 
-    <EditText
-        android:id="@+id/edit_txt"
-        android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/expand1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/shape"
-        android:hint="write your commit... "
-        android:padding="8dp"
         android:layout_marginEnd="8dp"
-        android:paddingEnd="48dp"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/account_image"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/account_image"
-        app:layout_constraintTop_toBottomOf="@+id/account_image"
-        app:layout_constraintTop_toTopOf="@id/account_image" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/player_video"
+        app:layout_constraintVertical_bias="0.01999998"
+        app:srcCompat="@drawable/expand" />
+
+    <ImageView
+        android:id="@+id/expand2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/player_video"
+        app:layout_constraintVertical_bias="0.01999998"
+        app:srcCompat="@drawable/expand" />
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/player_video"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/count_press_like">
+
+
+        <View
+            android:id="@+id/line1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="#D6D3D3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/line1"
+            tools:text="test" />
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/account_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/xyz"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/description"
+            app:shapeAppearanceOverlay="@style/Shape_image_circle" />
+
+        <EditText
+            android:id="@+id/edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/shape"
+            android:hint="write your commit... "
+            android:padding="8dp"
+            android:paddingEnd="48dp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/account_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/account_image"
+            app:layout_constraintTop_toBottomOf="@+id/account_image"
+            app:layout_constraintTop_toTopOf="@id/account_image" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
