--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -12,200 +12,13 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/player_video"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/movie_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="title"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/player_video"
-        app:layout_constraintStart_toStartOf="parent"
-
-        />
-
-    <TextView
-        android:id="@+id/views"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="800 views . "
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/movie_title"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="@+id/movie_title"
-        app:layout_constraintTop_toBottomOf="@+id/movie_title" />
-
-    <TextView
-        android:id="@+id/year_published"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="2 year "
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/views"
-        app:layout_constraintTop_toBottomOf="@+id/movie_title" />
-
-
-    <ImageView
-        android:id="@+id/like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_baseline_sentiment_satisfied_alt_24"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintEnd_toStartOf="@id/dislike"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/views" />
-
-    <TextView
-        android:id="@+id/number_of_like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="5"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/like"
-        app:layout_constraintStart_toStartOf="@+id/like"
-        app:layout_constraintTop_toBottomOf="@id/like" />
-
-    <ImageView
-        android:id="@+id/dislike"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintEnd_toStartOf="@id/share"
-
-        app:layout_constraintStart_toEndOf="@id/like"
-        app:layout_constraintTop_toBottomOf="@id/views" />
-
-    <TextView
-        android:id="@+id/count_press_like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/dislike"
-        app:layout_constraintStart_toStartOf="@+id/dislike"
-        app:layout_constraintTop_toBottomOf="@id/dislike" />
-
-
-
-    <ImageView
-        android:id="@+id/share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_baseline_share_24"
-        app:layout_constraintEnd_toStartOf="@id/download"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toEndOf="@id/dislike"
-        app:layout_constraintTop_toBottomOf="@id/views" />
-
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="share"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/share"
-        app:layout_constraintStart_toStartOf="@+id/share"
-        app:layout_constraintTop_toBottomOf="@id/share" />
-
-    <ImageView
-        android:id="@+id/download"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        android:src="@drawable/ic_baseline_arrow_circle_down_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/share"
-        app:layout_constraintTop_toBottomOf="@id/views" />
-
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="download"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/download"
-        app:layout_constraintStart_toStartOf="@+id/download"
-        app:layout_constraintTop_toBottomOf="@id/download" />
-
-
-
-    <ImageView
-        android:id="@+id/expand1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/movie_title"
-        app:layout_constraintTop_toBottomOf="@+id/player_video"
-        app:layout_constraintVertical_bias="0.01999998"
-        app:srcCompat="@drawable/expand" />
-
-    <ImageView
-        android:id="@+id/expand2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/movie_title"
-        app:layout_constraintTop_toBottomOf="@+id/player_video"
-        app:layout_constraintVertical_bias="0.01999998"
-        app:srcCompat="@drawable/expand" />
-
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/player_video"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/count_press_like">
-
-
-        <View
-            android:id="@+id/line1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="#D6D3D3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/line1"
-            tools:text="test" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -216,7 +29,7 @@
             android:layout_marginTop="40dp"
             android:src="@drawable/xyz"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/description"
+            app:layout_constraintTop_toBottomOf="@+id/player_video"
             app:shapeAppearanceOverlay="@style/Shape_image_circle" />
 
         <EditText
@@ -224,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/shape"
             android:hint="write your commit... "
             android:padding="8dp"
@@ -235,7 +48,6 @@
             app:layout_constraintStart_toEndOf="@+id/account_image"
             app:layout_constraintTop_toBottomOf="@+id/account_image"
             app:layout_constraintTop_toTopOf="@id/account_image" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
