--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -4,50 +4,184 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     tools:context=".ui.PlayerActivity">
 
 
-
-
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/player_video"
+    <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="250dp"
+        android:background="@drawable/img1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/ic_baseline_play_circle_outline_24"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintEnd_toStartOf="@+id/ic_bookmark"
+        app:layout_constraintStart_toEndOf="@+id/ic_move_back"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/account_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="40dp"
-            android:src="@drawable/xyz"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player_video"
-            app:shapeAppearanceOverlay="@style/Shape_image_circle" />
+    <ImageView
+        android:id="@+id/ic_move_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/edit_text"
-            android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/ic_bookmark"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/ic_bookmark"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/ic_move_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ic_move_back" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_movie_image"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="270dp"
+        android:paddingStart="10dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ic_move_back">
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/shape"
-            android:hint="write your commit... "
-            android:padding="8dp"
-            android:paddingEnd="48dp"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/account_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/account_image"
-            app:layout_constraintTop_toBottomOf="@+id/account_image"
-            app:layout_constraintTop_toTopOf="@id/account_image" />
+            android:background="@drawable/img" />
+    </androidx.cardview.widget.CardView>
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/color_transparent"
+        app:layout_constraintEnd_toEndOf="@+id/text_movie_name"
+        app:layout_constraintStart_toStartOf="@+id/text_movie_name"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/text_movie_name"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="SAW VI"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/card_movie_image"
+        app:layout_constraintTop_toTopOf="@+id/card_movie_image" />
+
+
+    <TextView
+        android:id="@+id/text_movies_category"
+        android:layout_width="250dp"
+        android:layout_height="20dp"
+        android:gravity="center"
+        android:text="Horror/Mystery  * 2 hours"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/card_movie_image"
+        app:layout_constraintEnd_toEndOf="@+id/text_movie_name"
+        app:layout_constraintStart_toStartOf="@+id/text_movie_name"
+        app:layout_constraintTop_toBottomOf="@+id/text_movie_name"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <TextView
+        android:id="@+id/text_movies_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:lineHeight="32dp"
+        android:text="Saw II is a 2005 horror film directed by Darren Lynn Bousman and written by Leigh Whannell and Bousman. It is the sequel to 2004\'s Saw and the second installment in the Saw film series"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/card_movie_image"
+        app:layout_constraintTop_toBottomOf="@+id/card_movie_image" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_buy_tickets"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="68dp"
+        android:alpha="0.3"
+        android:background="@drawable/button_tickets"
+        android:text="source code"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_movies_desc" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginHorizontal="8dp"
+        android:alpha="0.2"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/button_buy_tickets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_buy_tickets"
+        app:layout_constraintTop_toTopOf="@+id/button_buy_tickets" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginHorizontal="8dp"
+        android:alpha="0.2"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/button_buy_tickets"
+        app:layout_constraintEnd_toStartOf="@+id/button_buy_tickets"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_buy_tickets" />
+
+
+    <TextView
+        android:id="@+id/text_screenshot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        android:text="Screenshots"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button_buy_tickets"
+        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintStart_toStartOf="@+id/text_movies_desc"
+        app:layout_constraintTop_toBottomOf="@+id/button_buy_tickets" />
+
+
+
+
+
+
 
 
 
