--- a/app/src/main/res/layout/item_movie_funny.xml
+++ b/app/src/main/res/layout/item_movie_funny.xml
@@ -3,19 +3,22 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="8dp"
+    android:layout_marginStart="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/poster"
-        android:layout_width="150dp"
-        android:layout_height="190dp"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
         android:scaleType="fitXY"
-
+        android:elevation="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
-        app:strokeWidth="1dp"
         app:strokeColor="@color/red"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:strokeWidth="1dp" />
 
     <TextView
         android:id="@+id/title"
@@ -24,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="test"
         android:textSize="16sp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/poster"
         app:layout_constraintStart_toStartOf="@id/poster"
           app:layout_constraintBottom_toBottomOf="parent"
