--- a/app/src/main/res/drawable/source_code_shape.xml
+++ b/app/src/main/res/drawable/source_code_shape.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@color/black"
-        android:endColor="@color/white"
-        />
-
+    <stroke android:width="1dp"
+        android:color="@color/white"/>
+    <corners android:radius="16dp"/>
 
 </shape>
