--- a/app/src/main/res/drawable/source_code_shape.xml
+++ b/app/src/main/res/drawable/source_code_shape.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:width="1dp"
-        android:color="@color/white"/>
-    <corners android:radius="16dp"/>
+    <item android:state_pressed="false">
+        <shape android:shape="rectangle">
+            <stroke android:width="1dp" android:color="@color/white" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
 
-</shape>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+
+
+</selector>
