--- a/app/src/main/res/drawable-xxxhdpi/color_transparent.xml
+++ b/app/src/main/res/drawable-xxxhdpi/color_transparent.xml
@@ -3,8 +3,8 @@
 android:shape="rectangle">
 <gradient
     android:angle="270"
-    android:centerColor="#915F16"
-    android:endColor="#885914"
+    android:centerColor="#8C8C8C"
+    android:endColor="#707070"
     android:startColor="#0FF4F4F4" />
 <corners android:topLeftRadius="18dp" android:topRightRadius="18dp"/>
 </shape>
