improve the dark theme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".ui.HomeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -71,13 +70,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="enjoy with us"
-        android:textColor="#3D3D3D"
+        android:textColor="#9F9F9E"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/funny_recycler"
-      />
+        app:layout_constraintTop_toBottomOf="@id/funny_recycler" />
 
 
 
