--- a/app/src/main/res/layout/item_movie_funny.xml
+++ b/app/src/main/res/layout/item_movie_funny.xml
@@ -27,7 +27,7 @@
         android:text="test"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
-        android:textColor="@color/black"
+        android:textColor="#9F9F9E"
         app:layout_constraintEnd_toEndOf="@+id/poster"
         app:layout_constraintStart_toStartOf="@id/poster"
           app:layout_constraintBottom_toBottomOf="parent"
